[tool.poetry]
name = "tiltgroup-wrangler"
version = "0.1.0"
description = ""
authors = ["cesar mena <cmena@nysbc.org>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.1"
scikit-learn = "^1.2.1"

[tool.poetry.dev-dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
